pullrequest resolve 1. variable.scss에 main-white추가 2. TapButton class명칭 수정 및 단위 통일, ...props로 props 한번에 받아옴, 조건문 간소화 3. PlaceCard 단위 통일, ...props로 props 한번에 받아옴, spot의 proptypes에 isRequired추가 4. InputBox class 명칭 수정 및 단위 통일, 이메일 유효성 검사 함수 var변수 및 if문 수정, 함수 이름 구체화, 조건 랜더링 간소화 5. Hash 단위 통일, text를 div에서 span으로 수정, children의 defaultProp을 'null'에서 'null hash'로 수정 6. Ellipse 단위통일, white을 $main-white로 수정, ...props로 props한번에 받아옴, 조건문 간소화

--- a/src/views/components/Ellipse/Ellipse.scss
+++ b/src/views/components/Ellipse/Ellipse.scss
@@ -10,14 +10,14 @@
   text-align: center;
 
   &-toggle {
-    box-shadow: 1px 1px 1px $main-black-4;
-    background: white;
+    box-shadow: 1pt 1pt 1pt $main-black-4;
+    background: $main-white;
     color: $main-black-3;
   }
 
   &__text {
     display: inline-block;
     padding: 4pt;
-    font-size: 0.95rem;
+    font-size: 12pt;
   }
 }
