--- a/src/views/style/variable.scss
+++ b/src/views/style/variable.scss
@@ -5,3 +5,4 @@ $main-black-2: rgb(97, 97, 97);
 $main-black-3: rgb(156, 156, 156);
 $main-black-4: rgb(219, 219, 219);
 $main-black-5: rgb(247, 247, 250);
+$main-white: #ffffff;
