--- a/src/views/components/TapButton/TapButton.scss
+++ b/src/views/components/TapButton/TapButton.scss
@@ -1,18 +1,18 @@
 @import "../../style/index.scss";
 
-.tapbutton {
+.tap-btn {
   display: inline-block;
   box-sizing: border-box;
   width: 33%;
   height: 32pt;
-  border-bottom: 1px solid;
+  border-bottom: 1pt solid;
   color: $main-black-3;
   text-align: center;
   cursor: pointer;
 
-  .tapbutton__text {
+  &__text {
     padding-top: 6pt;
-    font-size: 1.2rem;
+    font-size: 15pt;
   }
 
   &-toggle {
