--- a/src/views/style/base.scss
+++ b/src/views/style/base.scss
@@ -1,22 +1,22 @@
 @charset "utf-8";
 
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 body {
-    background-color: #f5f5f5;
-    font-family: "NotoSans", NotoSans, “Helvetica Neue”, Helvetica, sans-serif;
+  background-color: #ffffff;
+  font-family: "NotoSans", NotoSans, “Helvetica Neue”, Helvetica, sans-serif;
 }
 a,
 a:active,
 a:focus,
 a:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 b {
-    font-weight: 700;
+  font-weight: 700;
 }
 
 dd,
@@ -24,5 +24,5 @@ dt,
 li,
 ol,
 ul {
-    list-style: none;
+  list-style: none;
 }
