>> inputbox에 많은 변화가 있습니다. 1.SignUpPage 제작    -SignUpTemplate 제작    -SignUpHeader는 임시로 넣어둠    >남은점 - header와 연동, icon완성시 상태에 따른 변화 2. PasswordPage제작    -PasswordTemplate 제작    >header가 SignUpPage에서 사용하는것과 거의 일치해 따로 만들지 같이 쓸지 고민    >남은점 - header와 연동, icon완성시 상태에 따른 변화

--- a/src/views/components/InputBox/InputBox.scss
+++ b/src/views/components/InputBox/InputBox.scss
@@ -6,7 +6,7 @@
   margin: auto;
   background: $main-white;
   &__input {
-    border-bottom: 1px solid;
+    border-bottom: 1px solid $main-black-3;
     color: $main-black-3;
     & input {
       width: 90%;
@@ -21,6 +21,7 @@
     }
 
     &-focus {
+      border-color: $main-black-1;
       color: $main-black-1;
     }
 
@@ -39,7 +40,8 @@
   }
 
   &__text {
-    color: $main-paleRed;
+    font-size: 8pt;
     font-weight: 200;
+    color: $main-paleRed;
   }
 }
