--- a/src/views/components/Comment/Comment.scss
+++ b/src/views/components/Comment/Comment.scss
@@ -1,45 +1,42 @@
 @import "../../style/index.scss";
+@import "../../style//variable.scss";
 
-//======댓글 표시=================================
+$font-size: 14px;
 
 .comment {
-  display: inline-block;
-  width: 90%;
   margin: 0.5rem 0;
-  padding-left: 1.1rem;
-  padding-right: 1.1rem;
+  padding: 0 16px;
+  margin-top: 16px;
 }
 
-.comment__head__icon{
+.head__icon{ 
   display: inline-block;
-  width: 1.1rem;
-  height: 1.1rem;
-  border: 0.1px solid black;
 }
-.comment__head__nickname{
+.head__nickname{
   display: inline-block;
-  color: rgb(51,51,51);
-  font-size:0.8rem;
+  color: $main-black-1;
+  font-size:$font-size;
   font-weight: bold;
-  margin-left: 0.2rem;
+  margin-left: 8px;
 }
-.comment__head__time{
+.head__time{
   display: inline-block;
-  color: rgb(156,156,156);
-  font-size:0.8rem;
+  color: $main-black-3;
+  font-size:$font-size;
   margin-left: 0.6rem;
 }
-.comment__head__menu{
+.head__menu{
   float: right;
 }
-.comment__content{
+.content{
+  margin-top: 6px;
   border-radius: 8px;
   display: inline-block;
-  width: 95%;
-  background-color: rgb(247,247,250);
+  width: 343px - 16px;
+  background-color: $main-black-5;
   color: #616161;
-  font-size:0.8rem;
-  padding: 1rem 0.5rem;
+  font-size:$font-size;
+  padding: 16px 8px;
 }
 
 
