--- a/src/views/components/CommentCreate/CommentCreate.scss
+++ b/src/views/components/CommentCreate/CommentCreate.scss
@@ -1,27 +1,26 @@
 @import "../../style/index.scss";
+@import "../../style//variable.scss";
 
 .createcommnet {
     position: fixed;
     bottom: 0px;
-    background-color: white;
-    width: 100%;
-    height: 12%;
-    border-top: 4px solid #e9ecef;
-    border-bottom: 1px solid #e9ecef;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
+    background-color: $main-white;
+    width: 375px;
+    height: 98px;
+    box-shadow: 0 -3px 5px 0 $main-black-4;
     text-align: center;
   }
   
   .createcommnet__form{
     display: inline-block;
-    background: #f7f7fa;
-    padding-left: 1.5rem;
-    font-size: 1rem;
+    background: $main-black-5;
+    padding:9px 18px;
+    font-size: 14px;
     border-radius: 8px;
     border: 1px solid #f7f7fa;
-    width: 85%;
-    height: 40%;
+    margin : 8px 16px 52px 16px;
+    width: 343px - 32px;
+    height: 19px;
     outline: none;
   }
   
