--- a/src/views/components/Authenticationbutton/Authenticationbutton.scss
+++ b/src/views/components/Authenticationbutton/Authenticationbutton.scss
@@ -1,19 +1,19 @@
 @import "../../style/index.scss";
-
+@import "../../style//variable.scss";
 
 
 .Authenticationbutton{
     background-color: #ffffff;
-    border: 2px solid rgb(156, 156, 156);
-    border-radius: 30px;
-    font-size: 1rem;
-    width: 90%;
-    padding: 1rem 1rem;
-    margin: 1rem auto;
-    display: block;
+    border: 1px solid $authentication-button;
+    border-radius: 25px;
+    font-size: 18px;
+    width: 343px;
+    padding-top:10px;
+    padding-bottom: 11px;
     outline: none;
+    color: $main-black-3;
     text-align: center;
+    &.done{
+        color: $main-black-1;
+    }
 }
-::placeholder{
-    color:rgb(156, 156, 156);
- }
