--- a/src/views/style/variable.scss
+++ b/src/views/style/variable.scss
@@ -6,3 +6,4 @@ $main-black-3: rgb(156, 156, 156);
 $main-black-4: rgb(219, 219, 219);
 $main-black-5: rgb(247, 247, 250);
 $main-white: #ffffff;
+$authentication-button: rgb(222, 222, 222);
