SignUpTemplate정리 SignUpForm을 만들어 코드 정리 SignUpForm을 이용한 컴포넌트 생성 SignUpPrivate - 개인정보 입력 SignUpAuth - 인증번호 입력 Email - 이메일 입력  ->  SignUpForm을 그대로 활용 inputbox 클래스 네이밍 수정

--- a/src/views/components/InputBox/InputBox.scss
+++ b/src/views/components/InputBox/InputBox.scss
@@ -5,20 +5,9 @@
   height: auto;
   margin: auto;
   background: $main-white;
-  &__input {
+  &__wrapper {
     border-bottom: 1px solid $main-black-3;
     color: $main-black-3;
-    & input {
-      width: 90%;
-      padding-top: 5pt;
-      padding-bottom: 5pt;
-      border: none;
-      outline: none;
-      color: $main-black-3;
-    }
-    & input:focus {
-      color: $main-black-1;
-    }
 
     &-focus {
       border-color: $main-black-1;
@@ -28,6 +17,18 @@
     &-notemail {
       border-color: $main-paleRed;
     }
+  }
+
+  &__input {
+    width: 90%;
+    padding-top: 5pt;
+    padding-bottom: 5pt;
+    border: none;
+    outline: none;
+    color: $main-black-3;
+  }
+  &__input:focus {
+    color: $main-black-1;
   }
 
   &__remove-btn {
