--- a/src/views/components/signUp/SignUpForm/SignUpForm.scss
+++ b/src/views/components/signUp/SignUpForm/SignUpForm.scss
@@ -1,19 +1,13 @@
 @import "../../../style/index.scss";
 
-.sign-up-form {
+.sign-up {
   width: 90%;
   margin: 0 auto;
   margin-top: 20pt;
-  &__text {
+  &__title {
     font-size: 13.5pt;
   }
   &__input {
     margin-top: 10pt;
-  }
-  &__return-text {
-    margin-top: 10pt;
-    float: right;
-    font-size: 8pt;
-    color: $main-butterscotch;
   }
 }
