style. 댓글 입력 폼 변경 된 디자인으로 수정

--- a/src/views/components/CommentCreate/CommentCreate.scss
+++ b/src/views/components/CommentCreate/CommentCreate.scss
@@ -18,9 +18,13 @@
     font-size: 14px;
     border-radius: 8px;
     border: 1px solid #f7f7fa;
-    margin : 8px 16px 52px 16px;
-    width: 343px - 32px;
+    margin : 8px 8px 8px 16px;
+    width: 302.9px - 32px;
     height: 19px;
     outline: none;
+  }
+  .createcommnet__button{
+    color:$main-butterscotch;
+    font-size:16px;
   }
   
