--- a/src/views/components/Authenticationbutton/Authenticationbutton.scss
+++ b/src/views/components/Authenticationbutton/Authenticationbutton.scss
@@ -1,17 +1,17 @@
 @import "../../style/index.scss";
-@import "../../style//variable.scss";
+@import "../../style/variable.scss";
 
 
 .Authenticationbutton{
-    background-color: #ffffff;
+    width: 343px;
     border: 1px solid $authentication-button;
     border-radius: 25px;
     font-size: 18px;
-    width: 343px;
     padding-top:10px;
     padding-bottom: 11px;
     outline: none;
     color: $main-black-3;
+    background-color: #ffffff;
     text-align: center;
     &.done{
         color: $main-black-1;
