--- a/src/views/components/Authenticationbutton/Authenticationbutton.scss
+++ b/src/views/components/Authenticationbutton/Authenticationbutton.scss
@@ -1,19 +1,20 @@
 @import "../../style/index.scss";
 @import "../../style//variable.scss";
 
-
-.Authenticationbutton{
-    background-color: #ffffff;
-    border: 1px solid $authentication-button;
-    border-radius: 25px;
-    font-size: 18px;
-    width: 343px;
-    padding-top:10px;
-    padding-bottom: 11px;
-    outline: none;
-    color: $main-black-3;
-    text-align: center;
-    &.done{
-        color: $main-black-1;
-    }
+.Authenticationbutton {
+  background-color: #ffffff;
+  border: 1px solid $authentication-button;
+  border-radius: 25px;
+  font-size: 18px;
+  width: 90%;
+  padding-top: 10px;
+  padding-bottom: 11px;
+  margin: 0 auto;
+  margin-top: 30pt;
+  outline: none;
+  color: $main-black-3;
+  text-align: center;
+  &.done {
+    color: $main-black-1;
+  }
 }
