feat. mypage style. 아이콘 추가

--- a/src/views/components/Card/CardView.scss
+++ b/src/views/components/Card/CardView.scss
@@ -17,7 +17,7 @@ $font-size: 14px;
   padding-top: 28px;
 }
 .header__title {
-  display: inline-block;
+  float: left;
   font-size: 18px;
   color: $main-black-1;
 }
