--- a/src/views/components/Comment/Comment.scss
+++ b/src/views/components/Comment/Comment.scss
@@ -24,6 +24,9 @@ $font-size: 14px;
   margin-left: 0.6rem;
   color: $main-black-3;
   font-size:$font-size;
+  font-family: "NotoSans";
+  font-style: normal;
+  font-weight: 300;
 }
 .head__menu{
   float: right;
@@ -37,6 +40,9 @@ $font-size: 14px;
   background-color: $main-black-5;
   color: #616161;
   font-size:$font-size;
+  font-family: "NotoSans";
+  font-style: normal;
+  font-weight: 300;
 }
 
 
