--- a/src/views/components/CommentCreate/CommentCreate.scss
+++ b/src/views/components/CommentCreate/CommentCreate.scss
@@ -16,6 +16,9 @@
     background: $main-black-5;
     padding:9px 18px;
     font-size: 14px;
+    font-family: "NotoSans";
+    font-style: normal;
+    font-weight: 300;
     border-radius: 8px;
     border: 1px solid #f7f7fa;
     margin : 8px 8px 8px 16px;
