--- a/src/views/components/Authenticationbutton/Authenticationbutton.scss
+++ b/src/views/components/Authenticationbutton/Authenticationbutton.scss
@@ -14,6 +14,9 @@
   outline: none;
   color: $main-black-3;
   text-align: center;
+  font-family: "NotoSans";
+  font-style: normal;
+  font-weight: normal;
   &.done {
     color: $main-black-1;
   }
