--- a/src/views/pages/LoginPage/LoginPage.scss
+++ b/src/views/pages/LoginPage/LoginPage.scss
@@ -22,7 +22,6 @@ $box-hegith: 48px;
   display: inline-block;
   width: 134px;
   height: 48px;
-  border: 1px solid #2e2514;
 }
 
 .input__email {
@@ -36,6 +35,9 @@ $box-hegith: 48px;
   background-color: #f5f5f5;
   color: #616161;
   font-size: $input-fontsize;
+  font-family: "NotoSans";
+  font-style: normal;
+  font-weight: 300;
   outline: none;
 }
 
@@ -64,29 +66,24 @@ $box-hegith: 48px;
   margin-top: 20px;
 }
 
-.bottom__Autologin--checkbox + label {
-  display: inline-block;
-  width: 24px;
-  height: 24px;
-  border: 2px solid #fbb33b;
-  cursor: pointer;
-}
-.bottom__Autologin--scheckbox:checked + label {
-  background-color: #fbb33b;
-  color: #f5f5f5;
-}
-
-.bottom__Autologin--checkbox {
-  display: none;
-}
 .bottom__forgotpassword {
   float: right;
   margin-top: 20px;
   color: #616161;
+  font-family: "NotoSans";
+  font-style: normal;
+  font-weight: 300;
 }
-.bottom__Autologin_span {
+.bottom__Autologin__icon{
+  float: left;
+}
+.bottom__Autologin__span {
+  float: left;
   margin-left: 8px;
   color: #616161;
+  font-family: "NotoSans";
+  font-style: normal;
+  font-weight: 300;
 }
 .bottom__signupbutton {
   display: block;
