--- a/src/views/pages/Mypage/item/item.scss
+++ b/src/views/pages/Mypage/item/item.scss
@@ -8,6 +8,9 @@
     display: inline-block;
     font-size: 16px;
     color:$main-black-1;
+    font-family: "NotoSans";
+    font-style: normal;
+    font-weight: 300;
 }
 .block__icon{
     float: right;
