--- a/src/views/components/Comment/Comment.scss
+++ b/src/views/components/Comment/Comment.scss
@@ -1,5 +1,5 @@
 @import "../../style/index.scss";
-@import "../../style//variable.scss";
+@import "../../style/variable.scss";
 
 $font-size: 14px;
 
@@ -7,6 +7,7 @@ $font-size: 14px;
   margin: 0.5rem 0;
   padding: 0 16px;
   margin-top: 16px;
+  
 }
 
 .head__icon{ 
