헤더 마무리

--- a/src/views/components/Post/PostTagModal/PostTagModalInput/PostTagModalInput.scss
+++ b/src/views/components/Post/PostTagModal/PostTagModalInput/PostTagModalInput.scss
@@ -5,6 +5,7 @@
   height: 30pt;
   margin: 0 auto;
   margin-bottom: 12pt;
+  margin-top: 3pt;
   border-radius: 5pt;
   background: $main-black-5;
 }
