--- a/src/views/components/signUp/SignUpHeader/SignUpHeader.scss
+++ b/src/views/components/signUp/SignUpHeader/SignUpHeader.scss
@@ -1,1 +1,30 @@
 @import "../../../style/index.scss";
+
+.header {
+  &__wrapper {
+    display: flex;
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 10pt;
+    margin-bottom: 10pt;
+  }
+
+  &__back {
+    flex: 1;
+    max-width: 30px;
+  }
+
+  &__title {
+    flex: 8;
+    text-align: center;
+  }
+
+  &__next {
+    flex: 1;
+    max-width: 30px;
+    color: $main-black-4;
+    &-isnext {
+      color: $main-black-1;
+    }
+  }
+}
