--- a/src/views/pages/UpdateUserpage/Updateform/Updateform.module.scss
+++ b/src/views/pages/UpdateUserpage/Updateform/Updateform.module.scss
@@ -21,6 +21,7 @@ margin-top:40px;
       }
 }
 .update__box__input{
+    width:300px;
     font-size:14px;
     font-family: "NotoSans";
     font-style: normal;
