--- a/src/views/style/variable.scss
+++ b/src/views/style/variable.scss
@@ -7,3 +7,6 @@ $main-black-4: rgb(219, 219, 219);
 $main-black-5: rgb(247, 247, 250);
 $main-white: #ffffff;
 $authentication-button: rgb(222, 222, 222);
+
+$modal-blue: rgb(0 ,122 ,255);
+$modal-red: rgb(255 ,59, 48);
