--- a/src/views/components/CommentCreate/CommentCreate.scss
+++ b/src/views/components/CommentCreate/CommentCreate.scss
@@ -4,7 +4,7 @@
     position: fixed;
     bottom: 0px;
     background-color: $main-white;
-    width: 375px;
+    width: 100%;
     height: 98px;
     box-shadow: 0 -3px 5px 0 $main-black-4;
     text-align: center;
